# FuncTs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  offset2bbox.torchscript  setup.py
benchmark/: nasrnn.py
benchmark/ai_model/attention/: attention.py
benchmark/ai_model/fcos/: fcos_bbox.py  fcos_bbox_unroll.py  run.py
benchmark/ai_model/lstm/: lstm.py
benchmark/ai_model/nasrnn/: nasrnn.py
benchmark/ai_model/seq2seq/: seq2seq.py
benchmark/ai_model/ssd/: run.py  ssd_bbox.py  ssd_bbox_unroll.py
benchmark/ai_model/ssd_static/: run.py  ssd_bbox_static.py
benchmark/ai_model/yolact/: run.py  yolact_mask.py
benchmark/ai_model/yolov3/: log.txt  run.py  yolov3_bbox.py
benchmark/ai_model/yolov3_static/: run.py  yolov3_bbox_static.py
benchmark/simpleops/: offset2bbox.py
benchmark/simpleops/attention/: attention.py
benchmark/simpleops/bbox_expand/: bbox_expand.py
benchmark/simpleops/normalize/: log.txt  normalize.py
benchmark/simpleops/offset2bbox/: offset2bbox.py  offset2bbox.shape.torchscript  offset2bbox.shape.torchscript.tmp  offset2bbox.torchscript
examples/: branch.py  branch_copy.py  container.py  func.py  get_started.py  homo_conv.py  kernel_fusion.py  loop.py  normal_alias.py  offset2bbox.py  pmap.py  tensorexpr.py  test_func.py
fait/: CMakeLists.txt  README.md  fait.cpp  run_net_trt.cpp  run_trt.cpp  run_ts.cpp  run_utils.h  simple_loop_nnc.cpp
fait/fuser/: codegen.h  custom_lowering_func.cpp  graph_builder.cpp  graph_builder.h  lowering_utils.h  nnc_func.h  shape_func.cpp  solve_update.cpp  solve_update.h  tssa_set_ops.cpp  tssa_set_ops.h
fait/models/: fcos_bbox.json  fcos_bbox.py  fcos_net.py  loop_copy.json  rtmdet_bbox.json  rtmdet_bbox.py  rtmdet_net.py  solov2_mask.json  solov2_mask.py  solov2_net.py  ssd_bbox.json  ssd_bbox.py  ssd_net.py  yolact_mask.json  yolact_mask_prof.py  yolact_net.py  yolov3_bbox.json  yolov3_bbox.py  yolov3_bbox_prof.py  yolov3_net.py
fait/passes/: canonicalize.cpp  canonicalize.h  common_passes.h  cp_tssa.cpp  cse_tssa.cpp  dce_tssa.cpp  freeze_module.cpp  freeze_module.h  fuse_ops.cpp  fuse_ops.h  licm.cpp  op_stat.cpp  op_stat.h  parallelize_loops.cpp  parallelize_loops.h  profile_ops.cpp  profile_ops.h  refine_types.cpp  refine_types.h  te_op.cpp  te_op.h  tensor_ssa.cpp  tensor_ssa.h  tensor_type_funcs.cpp  type_utils.h  unroll_loops.cpp  unroll_loops.h  validate_graph.cpp  validate_graph.h
fait/tensorexpr/: ATenNVRTC.h  cuda_codegen_tssa.cpp  cuda_codegen_tssa.h  elim_common_subexpr.cpp  elim_common_subexpr.h  evaluate_dim.cpp  evaluate_dim.h  evaluate_output_shape.cpp  evaluate_output_shape.h  extract_common_cond.cpp  extract_common_cond.h  flatten_indices.cpp  flatten_indices.h  functor_parallization.cpp  functor_parallization.h  interm_bufs.cpp  interm_bufs.h  ir_utils.cpp  ir_utils.h  parallel_for_equal_substitution.cpp  parallel_for_equal_substitution.h  reconstruct_extent.cpp  reconstruct_extent.h  tuple_expr.cpp  tuple_expr.h
fait/testing/: lowering_tests.json  test_lowering.cpp
fait/util/: common.h  disjoint_set.h  ir.cpp  logging.h  metrics.cpp  metrics.h  name.h  profile.cpp  profile.h  rand.cpp  rand.h  traits.cpp  types.cpp  types.h
fait/util/cupti_ext/: Eval.cpp  Eval.h  FileOp.h  List.cpp  List.h  Metric.cpp  Metric.h  Parser.h  ScopeExit.h  Utils.h
figure/: latency.py
figures/: ablation.py  e2e_ratio.py  functs_vs_tensor_ssa.py  kernel_launch.py  latency.py  latency_3090.py  latency_cudagraph.py  latency_imperative.py  memcpy.py  post_ratio.py  scalability.py  scalability_cv.py  scalability_seq_len.py
functs/: __init__.py
functs/_C/: __init__.pyi
functs/benchmark/: __init__.py  utils.py
functs/benchmark/ai_model/fcos/: __init__.py  fcos_bbox.py
functs/benchmark/ai_model/lstm/: __init__.py  lstm.py
functs/benchmark/ai_model/nasrnn/: __init__.py  nasrnn.py
functs/benchmark/ai_model/seq2seq/: seq2seq.py
functs/benchmark/ai_model/ssd/: __init__.py
functs/benchmark/ai_model/yolact/: __init__.py  run.py  yolact_mask.py
functs/benchmark/ai_model/yolov3/: __init__.py  yolov3_bbox.py  yolov3_bbox_unroll.py
functs/benchmark/simpleops/attention/: __init__.py  attention.py
functs/benchmark/simpleops/bbox_expand/: __init__.py
functs/benchmark/simpleops/normalize/: __init__.py  normalize.py
functs/benchmark/simpleops/offset2bbox/: __init__.py
functs/benchmark/simpleops/sparse_mlp/: sparse_mlp.py
functs/csrc/: Module.cpp  stub.c
functs/csrc/jit/api/: aot_compilation_unit.h  aot_graph_impl.cpp  aot_graph_impl.h
functs/csrc/jit/ir/: alias_analysis.cpp  alias_analysis.h  buffer_forest.cpp  buffer_forest.h  symbol_ext.cpp  symbol_ext.h  type_hashing.cpp  type_hashing.h
functs/csrc/jit/passes/: convert_to_tensorssa.cpp  convert_to_tensorssa.h  functs_te_fuser.cpp  functs_te_fuser.h  remove_inplace.cpp  remove_inplace.h  shape_analysis.cpp  shape_analysis.h
functs/csrc/jit/passes/fait/: fait_pipeline.cpp  fait_pipeline.h
functs/csrc/jit/passes/parallel/: extract_homo_from_pmap.cpp  extract_homo_from_pmap.h
functs/csrc/jit/python/: init.cpp  init.h  script_init.cpp  script_init.h
functs/csrc/jit/runtime/: aot_graph_executor.cpp  aot_graph_executor.h  aot_graph_executor_impl.cpp  aot_graph_executor_impl.h  immut_ops.cpp
functs/csrc/jit/tensorexpr/: lowerings.cpp  lowerings.h  nnc_ext.cpp  nnc_ext.h
functs/csrc/jit/utils/: common.h  ir.h  refine_type.h  traits.h  type_utils.h
functs/csrc/parallel/ops/: homo_conv.cpp  homo_conv.h
functs/csrc/parallel/python/: ops_init.cpp  ops_init.h
functs/csrc/parallel/runtime/: device_api.h  device_registry.h  func_wrapper.h  module.h
functs/csrc/parallel/runtime/cpu/: cpu_device_api.cpp  cpu_device_api.h  cpu_func_wrapper.h  cpu_module.h
functs/csrc/parallel/runtime/cuda/: cuda_common.h  cuda_device_api.cpp  cuda_device_api.h  (+4 more)
functs/csrc/utils/: logging.h
functs/jit/: __init__.py  _script.py
functs/utils/: __init__.py  evaluate.py  prof.py  timer.py
scripts/: draw_latency.py  get_latency.py  latency_log.txt
test/: test_basic.py  test_immut_nnc.py  test_immut_tensorexpr.py
(+4 files in other folders)
